--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -25,10 +25,10 @@
             android:layout_marginHorizontal="10dp"
             android:layout_marginStart="10dp"
             android:background="@drawable/search_bg"
-            android:hint="请输入地址"
+            android:hint="请输入城市名"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:maxLength="1"/>
+            android:singleLine="true"/>
 
     </FrameLayout>
 
