--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -52,22 +52,17 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:gravity="start|center_horizontal"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
+            android:paddingTop="12dp"
             android:text="检查新版本"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/feedback_btn"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:gravity="start|center_horizontal"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
+            android:paddingTop="12dp"
             android:text="意见反馈"
-            android:textSize="15sp"
             android:textStyle="bold" />
 
         <Button
@@ -75,10 +70,8 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:gravity="start|center_horizontal"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
+            android:paddingTop="12dp"
             android:text="鼓励支持"
-            android:textSize="15sp "
             android:textStyle="bold" />
 
         <View
