--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -7,42 +7,44 @@
     android:orientation="vertical"
     tools:context=".Favorites">
 
-    <include layout="@layout/common_title"/>
+    <include layout="@layout/common_title" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rev"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="5"
-        android:id="@+id/rev"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="20dp"
-        android:layout_height="wrap_content">
+        android:padding="20dp">
 
         <Button
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:textColor="#fff"
-            android:layout_weight="1"
-            android:text="全选"
             android:id="@+id/quan"
-            android:background="@color/colorPrimary"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:textSize="20sp"/>
-
-        <Button
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:textColor="#fff"
-            android:text="删除"
-            android:id="@+id/del"
-            android:background="@color/colorPrimary"
-            android:layout_marginLeft="30dp"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_weight="1"
-            android:textSize="20sp"/>
+            android:background="@color/colorPrimary"
+            android:text="全选"
+            android:textColor="#fff"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/del"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_marginLeft="30dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="删除"
+            android:textColor="#fff"
+            android:textSize="20sp" />
     </LinearLayout>
+
 </LinearLayout>
