--- a/app/src/main/res/layout/activity_like.xml
+++ b/app/src/main/res/layout/activity_like.xml
@@ -7,15 +7,48 @@
     android:orientation="vertical"
     tools:context=".Favorites">
 
-    <include layout="@layout/common_title" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <ImageView
+            android:id="@+id/imgback"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/left_white" />
+
+        <TextView
+            android:id="@+id/comTitle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_weight="10"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="标题"
+            android:textColor="#ffffff"
+            android:textSize="15sp" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp" />
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rev"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp" />
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +58,7 @@
 
         <Button
             android:id="@+id/quan"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_weight="1"
@@ -36,14 +69,16 @@
 
         <Button
             android:id="@+id/del"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="20dp"
             android:layout_weight="1"
             android:background="@color/colorPrimary"
             android:text="删除"
             android:textColor="#fff"
             android:textSize="20sp" />
+
     </LinearLayout>
+
 </LinearLayout>
