--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -13,12 +13,47 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/about_back"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/left_white" />
+
+            <TextView
+                android:id="@+id/about_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:layout_weight="10"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="标题"
+                android:textColor="#ffffff"
+                android:textSize="15sp" />
+
+            <View
+                android:layout_width="35dp"
+                android:layout_height="35dp" />
+
+        </LinearLayout>
+
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/about_iv"
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="70dp"
             android:background="@drawable/apple_pic" />
 
         <TextView
@@ -40,8 +75,7 @@
             android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
             android:text="version 1.0 "
-            android:textSize="10sp"
-            android:textStyle="italic" />
+            android:textSize="10sp" />
 
         <View
             android:layout_width="match_parent"
@@ -86,9 +120,9 @@
             android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
             android:text="用户协议"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="15sp"
-            android:textStyle="normal"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:textStyle="normal" />
 
         <TextView
             android:id="@+id/privacy_tv"
@@ -97,9 +131,9 @@
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
             android:text="隐私政策"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="15sp"
-            android:textStyle="normal"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:textStyle="normal" />
 
         <TextView
             android:id="@+id/companyName_tv"
