--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -5,19 +5,19 @@
     android:layout_margin="15dp">
 
     <TextView
-        android:id="@+id/dateInfo"
+        android:id="@+id/hor_dateInfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="4" />
 
     <ImageView
-        android:id="@+id/skyIcon"
+        android:id="@+id/hor_skyIcon"
         android:layout_width="20dp"
         android:layout_height="20dp" />
 
     <TextView
-        android:id="@+id/skyInfo"
+        android:id="@+id/hor_skyInfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
@@ -25,7 +25,7 @@
         android:gravity="center" />
 
     <TextView
-        android:id="@+id/temperatureInfo"
+        android:id="@+id/hor_temperatureInfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
