--- a/app/src/main/res/layout/activity_picture.xml
+++ b/app/src/main/res/layout/activity_picture.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Favorites">
+    tools:context=".PictureActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +15,7 @@
         android:padding="10dp">
 
         <ImageView
-            android:id="@+id/imgback"
+            android:id="@+id/picture_back"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_gravity="center_vertical"
@@ -32,7 +32,7 @@
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_weight="10"
             android:gravity="center_vertical|center_horizontal"
-            android:text="标题"
+            android:text="图片展示"
             android:textColor="#ffffff"
             android:textSize="15sp" />
 
@@ -43,42 +43,9 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rev"
+        android:id="@+id/orange_rv"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:paddingBottom="20dp"
-        android:paddingTop="20dp" />
+        android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="20dp">
-
-        <Button
-            android:id="@+id/selectAll"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
-            android:text="全选"
-            android:textColor="#fff"
-            android:textSize="20sp" />
-
-        <Button
-            android:id="@+id/del"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_marginLeft="20dp"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
-            android:text="删除"
-            android:textColor="#fff"
-            android:textSize="20sp" />
-
-    </LinearLayout>
 
 </LinearLayout>
