--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -38,7 +38,7 @@
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_weight="10"
                 android:gravity="center_vertical|center_horizontal"
-                android:text="标题"
+                android:text="@string/title"
                 android:textColor="#ffffff"
                 android:textSize="15sp" />
 
@@ -63,7 +63,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
-            android:text="关于我们"
+            android:text="@string/about_us"
             android:textSize="15sp"
             android:textStyle="bold" />
 
@@ -74,8 +74,9 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
-            android:text="version 1.0 "
-            android:textSize="10sp" />
+            android:text="@string/version_number"
+            android:textSize="10sp"
+            tools:ignore="SmallSp" />
 
         <View
             android:layout_width="match_parent"
@@ -87,7 +88,7 @@
             android:layout_height="55dp"
             android:gravity="start|center_horizontal"
             android:paddingTop="12dp"
-            android:text="检查新版本"
+            android:text="@string/check_version"
             android:textStyle="bold" />
 
         <Button
@@ -96,7 +97,7 @@
             android:layout_height="55dp"
             android:gravity="start|center_horizontal"
             android:paddingTop="12dp"
-            android:text="意见反馈"
+            android:text="@string/feedback"
             android:textStyle="bold" />
 
         <Button
@@ -105,7 +106,7 @@
             android:layout_height="55dp"
             android:gravity="start|center_horizontal"
             android:paddingTop="12dp"
-            android:text="鼓励支持"
+            android:text="@string/thank_suppose"
             android:textStyle="bold" />
 
         <View
@@ -119,7 +120,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
-            android:text="用户协议"
+            android:text="@string/user_agreement"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="15sp"
             android:textStyle="normal" />
@@ -130,7 +131,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:text="隐私政策"
+            android:text="@string/privacy_policy"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="15sp"
             android:textStyle="normal" />
@@ -142,7 +143,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
-            android:text="厦门鸿物世代科技有限公司"
+            android:text="@string/company_name"
             android:textSize="15sp"
             android:textStyle="bold" />
 
