--- a/app/src/main/res/layout/common_title.xml
+++ b/app/src/main/res/layout/common_title.xml
@@ -10,7 +10,7 @@
         android:layout_width="35dp"
         android:layout_gravity="center_vertical"
         android:src="@drawable/left_white"
-        android:id="@+id/imgback"
+        android:id="@+id/img_back"
         android:scaleType="fitCenter"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
@@ -26,7 +26,7 @@
         android:layout_weight="10"
         android:id="@+id/comTitle"
         android:textColor="#ffffff"
-        android:text="标题"/>
+        android:text="@string/title"/>
 
     <!--<TextView
         android:layout_width="35dp"
