--- a/app/src/main/res/layout/mover_recyclerview_adapater.xml
+++ b/app/src/main/res/layout/mover_recyclerview_adapater.xml
@@ -32,7 +32,7 @@
             android:gravity="left|center_vertical"
             android:text="电影标题"
             android:layout_marginTop="8dp"
-            android:id="@+id/stitle"
+            android:id="@+id/moveTitleTV"
             android:ellipsize="middle"
             android:textSize="15sp"
             android:singleLine="true" />
